// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when bail is not set should print the error 1`] = `
"[1mcomponents/foo.js[22m - 1 error

  [31m✖ ResolveError: Validation error[39m
    Index: [0]
    Kind: v1/Pod
    Name: foo

      /spec must have required property 'containers'
      /spec must be null
      /spec must match exactly one schema in oneOf

[1mcomponents/nginx.js[22m - 2 errors

  [31m✖ ResolveError: Validation error[39m
    Index: [0]
    Kind: apps/v1/Deployment
    Name: nginx

      /spec must have required property 'selector'
      /spec must be null
      /spec must match exactly one schema in oneOf

  [31m✖ ResolveError: Validation error[39m
    Index: [1]
    Kind: v1/Service
    Name: nginx

      /spec/type must be equal to one of the allowed values: ["ClusterIP","ExternalName","LoadBalancer","NodePort"]
      /spec must be null
      /spec must match exactly one schema in oneOf

[31merror[39m - Generate failed (Total 3 errors)"
`;

exports[`when bail is true should print the error 1`] = `
"[1mcomponents/foo.js[22m - 1 error

  [31m✖ ResolveError: Validation error[39m
    Index: [0]
    Kind: v1/Pod
    Name: foo

      /spec must have required property 'containers'
      /spec must be null
      /spec must match exactly one schema in oneOf

[31merror[39m - Generate failed (Total 1 error)"
`;
